tests/samples/import-same-path/error.txt
A template shouldn't import itself, "'./template.blate'" found on line 2 at index 10.

1|// error: import same path
2|{@import './template.blate' context}
           ^
3|
